# Focus

./: Cargo.toml  README.md  build.rs  build_linux.sh  build_windows.ps1  focus.py  focus_pyside6.py  info.md  tasks.md
demo/: checklist.demo.json
docs/: android-sync.md  google-drive-setup.md  sync-schema.md
src/: audio.rs  google_drive.rs  main.rs  model.rs  notifications.rs  storage.rs
ui/: app.slint
