[package]
name = "focus"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
# Compila `ui/app.slint` a Rust durante el build.
slint-build = "1.10"

[dependencies]
# UI nativa GPU-accelerated con backend winit.
slint = { version = "1.10", features = ["backend-winit", "renderer-femtovg", "std", "unstable-winit-030"] }
# Serializacion de modelos a/desde JSON.
serde = { version = "1.0", features = ["derive"] }
# Lectura y escritura del archivo de persistencia e import/export.
serde_json = "1.0"
# Fechas para timestamps, vencimientos y contadores de historial.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
