[package]
name = "focus"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
# Compila `ui/app.slint` a Rust durante el build.
slint-build = "1.10"

[dependencies]
# UI nativa GPU-accelerated con backend winit.
slint = { version = "1.10", features = ["backend-winit", "renderer-femtovg", "std", "unstable-winit-030"] }
# Serializacion de modelos a/desde JSON.
serde = { version = "1.0", features = ["derive"] }
# Lectura y escritura del archivo de persistencia e import/export.
serde_json = "1.0"
# Fechas para timestamps, vencimientos y contadores de historial.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
# HTTP blocking para OAuth y Google Drive.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# Escapado simple para query params OAuth.
urlencoding = "2.1"
# Selector de archivos nativo.
rfd = "0.15"
# Reproduccion simple de sonidos personalizados.
rodio = { version = "0.20", default-features = false, features = ["wav", "mp3", "flac", "vorbis"] }

[target.'cfg(windows)'.dependencies]
# Tonos simples en Windows, equivalentes al winsound del script original.
windows-sys = { version = "0.61", features = ["Win32_System_Diagnostics_Debug"] }
